[package]
name = "arweave"
version = "0.1.0"
authors = ["Gustav Behm <me@rootmos.io>"]
edition = "2018"

[dependencies]
reqwest = "0.9.22"
serde = "1.0.102"
base64 = "0.11.0"
chrono = { version = "0.4.9", features = ["serde"] }
num-bigint = "0.2.3"
num-traits = "0.2.10"
openssl = "0.10.25"

[dev-dependencies]
rand = "0.7.2"
